Tweaks to set min height on card, to fix overflow issues

--- a/UI/Card/card.module.css
+++ b/UI/Card/card.module.css
@@ -1,6 +1,6 @@
 .card {
    width: 395px;
-   height: 666px;
+   min-height: 666px;
    background: #FFFFFF;
    box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.1);
    border-radius: 32px;
@@ -51,6 +51,7 @@
    display: flex;
    flex-direction: column;
    padding: 0;
+   margin: 0;
 }
 
 .attribute {
